--- a/Progressive-Web-Apps-developments.html
+++ b/Progressive-Web-Apps-developments.html
@@ -51,7 +51,9 @@
             x[slideIndex - 1].style.display = "block";
         }
     </script>
+
     <!-- Facebook Pixel Code -->
+
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
@@ -67,9 +69,12 @@
         fbq('init', '1058328880878051');
         fbq('track', 'PageView');
     </script>
+
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=1058328880878051&ev=PageView&noscript=1" /></noscript>
-    <!-- End Facebook Pixel Code -->
+    
+            <!-- End Facebook Pixel Code -->
+
     <script>
         $(function () {
             $("#header").load("header.html");
@@ -81,6 +86,7 @@
 
 <body>
     <div id="header"></div>
+
     <!-- =-==- banner -==-=-=-=- -->
 
     <section class="about-banner"
@@ -119,10 +125,9 @@
                         <div class="ai-content">
                             <p>In an ever-changing market equilibrium, the web development environment has transformed
                                 in response to the demand for more scalable and cross-platform web and enterprise
-                                applications. Legacy web apps have given way to progressive web apps (PWAs) that can be
+                                applications. Legacy web apps have given way to progressive web apps that can be
                                 easily accessed by mobile users to help enterprises address business needs and connect
                                 with customers using a variety of devices and platforms seamlessly.
-
                             </p>
                             <b><a href="progressive-web-app-future.html">Learn More &gt;</a></b>
                         </div>
@@ -132,44 +137,6 @@
         </div>
 
     </section>
-
-    <!--  <section class="ai">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>
-                        <div class="title-style"></div>
-                        How it goes, <span>step by step</span>
-                    </h2>
-                </div>
-            </div>
-            <div class="row align-items-center flex-lg-row-reverse">
-                <div class="col-lg-6">
-                    <div class="ai-main">
-                        <div class="ai-content">
-                            <p>
-
-                                <b>Nanostuffs</b> has extensive experience helping companies implement Prograssive web
-                                application , We employ an advanced software development lifecycle to keep the process
-                                open
-                                and
-                                transparent, &amp; to provide you with a clear road map to the successful completion of
-                                your
-                                project.
-                            </p>
-                            <b><a href="">Learn More &gt;</a></b>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 text-center">
-                    <img src="img/pwa-9.gif">
-                </div>
-
-            </div>
-        </div>
-
-    </section> -->
 
     <section class="blockchain">
         <div class="container">
@@ -187,7 +154,7 @@
                         How it goes, <span>step by step</span>
                     </h2>
                     <p>
-                        <b>Nanostuffs</b> has extensive experience helping companies implement Prograssive web
+                        <b>Nanostuffs</b> has extensive experience helping companies implement progressive web
                         application , We employ an advanced software development lifecycle to keep the process open and
                         transparent, &amp; to provide you with a clear road map to the successful completion of your
                         project.
@@ -216,12 +183,12 @@
                 <div class="col-lg-6">
                     <div class="ai-main" style="background-image:url(img/monitoring-bg.png);">
                         <div class="ai-content">
-                            <p>Our Progressive web app developers combine years of experience with the power of PWA
+                            <p>Our progressive web app developers combine years of experience with the power of PWA
                                 technology to provide cutting-edge solutions that help you stand out in a sea of
                                 millions.
                                 <br><br>
                                 Proud to mention that our skills are not just limited to web development & mobile
-                                applications but also Progrssive web app development
+                                applications but also progressive web app development
                                 using Front-end Frameworks &amp; backend technology.
                                 <!-- Await for soon to be launched some Apps for PWA, e.g. waba.com -->
                             </p>
@@ -248,13 +215,10 @@
                         Staff Augmentation<span>(Resource Outsourcing)</span>
                     </h2>
                     <p>
-                        Hire our specialized Architects/Consultants/Developers on a contract basis, using the Time &amp;
-                        Material pricing model. They can work from either our office or your office in &amp; out of
-                        India.
-                        We already provide highly experienced and certified web, android, iOS Developers,
-                        Architects, Pardot &amp; ExactTarget Consultants, Social Monitoring Experts, Service Cloud
-                        Developers, Testers & Quality Assurance Agents, Project Managers, Solution Experts, &amp; others
-                        to a number of large MNCs. Please contact us to learn more about our rates.
+                        Hire our specialised PWA Developers on a contract basis using the Time & Material pricing model.
+                        They can work from either our office or your office in and out of India. We already provide
+                        highly experienced and certified web, android, iOS & PWA Developers and Testers to a number of
+                        large MNCs. Please contact us to learn more about our rates.
                     </p>
                     <b><a href="contactus.html">Continue Knowing Nanostuffs &gt;</a></b>
                 </div>
@@ -262,107 +226,8 @@
         </div>
     </section>
 
-    
-    <!--  <section class="service-main">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>
-                        <div class="title-style"></div>
-                        PWA Expertise &<span>Experiences</span>
-                    </h2>
-                </div>
-            </div>
-            <div class="row mt-4">
-
-                <div class="col-lg-6 animated fadeInUp wow">
-                    <div class="s-icon">
-                        <img src="img/sf/setting.png" />
-                    </div>
-                    <div class="s-content">
-                        <strong>Custom Progressive Web App Development</strong>
-                        <p>
-                            We create custom progressive web applications with an intuitive user interface, quick
-                            animations, a native-like feel, and lightning fast speed based on your specific business
-                            requirements.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-6 animated fadeInUp wow">
-                    <div class="s-icon">
-                        <img src="img/a_w_c.png" />
-                    </div>
-                    <div class="s-content">
-                        <strong>Progressive Web Design and Development</strong>
-                        <p>
-                            We assist you in unlocking the power of mobile devices in ways that traditional browsers
-                            can't. We provide a unified user experience and help you significantly increase your
-                            mobile
-                            conversion rates by using standardised and seamless progressive enhancement and
-                            development.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-6 animated fadeInUp wow">
-                    <div class="s-icon">
-                        <img src="img/Paw.png" />
-                    </div>
-                    <div class="s-content">
-                        <strong>Responsive Web App Design</strong>
-                        <p>
-                            Our skilled Progressive web app developers create solutions that provide seamless
-                            interactivity across multiple devices and browsers at lightning speed.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-6 animated fadeInUp wow">
-                    <div class="s-icon">
-                        <img src="img/si-1.png" />
-                    </div>
-                    <div class="s-content">
-                        <strong>Application Shell Architecture</strong>
-                        <p>
-                            We build PWAs on the app shell model to provide an extraordinary user experience with
-                            easy -
-                            to - navigate and fast speed without interference.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-6 animated fadeInUp wow">
-                    <div class="s-icon">
-                        <img src="img/report1.png" />
-                    </div>
-                    <div class="s-content">
-                        <strong>Quality Assurance Testing</strong>
-                        <p>
-                            We use an agile development process and extensive testing for PWA development in order
-                            to
-                            offer total support and maintenance. We guarantee the bug-free operation of your PWA
-                            solutions.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-6 animated fadeInUp wow">
-                    <div class="s-icon">
-                        <img src="img/sf/computer_view.png" />
-                    </div>
-                    <div class="s-content">
-                        <strong>Secure Data Migration</strong>
-                        <p>
-                            We design a data-intensive online application using a structured methodology that allows
-                            for
-                            faster, smooth, and safe data movement across browsers.
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>  -->
-
-
-
     <!-- =--=-=-=-= footer -==-=-=-=--= -->
+
     <div id="footer"></div>
 
     <script type="text/javascript">
