--- a/about.html
+++ b/about.html
@@ -73,6 +73,16 @@
     });
   </script>
 
+  <style>
+    .bulletpoints {
+      color: #1e1e1e;
+      /* font-family: 'Aspira-Medium'; */
+      text-align: left;
+      margin: 0 0 30px;
+      font-size: 18px;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -90,14 +100,80 @@
   </section>
 
   <!-- -=-=-=-=-=-=- content part -=---=-=-=--=- -->
+
+  <!-- 
+  <section class="service-main">
+    <div class="container">
+      <div id="Financial_Industry" class="container tab-pane active">
+        <h2>
+          <div class="title-style"></div>
+          Our<span>Vision</span>
+        </h2>
+      </div>
+  </section>
+
+  <section class="main-content">
+    <div class="container">
+      <div id="Financial_Industry" class="container tab-pane active">
+        <h2>
+          <div class="title-style"></div>
+          Our Values <span></span>
+        </h2>
+      </div>
+      <div class="row align-items-center mt-4">
+        <div class="col-lg-12">
+          <p>
+            <b>Nanostuffs</b> has built on 4 pillars that showcase our approach and behaviour towards everyone who is
+            part of us.
+
+            <li><b>Honesty</b> - We are like an open book to our employees and clients, and also, we never commit any
+              fake
+              commitments to any of our stakeholders.</li>
+            <li><b>Respect</b> - We appreciate the demands and expectations of all the stakeholders as well as clients.
+              We honour
+              the views and suggestions of our employees.</li>
+            <li><b>Dependable</b> - Our clients and employees will always have our back. We are reliable when our
+              stakeholders need
+              any support or help.</li>
+            <li><b>Follow Ethics</b> -We always acknowledge following work ethics and taking part in healthy
+              competition.</li>
+          </p>
+
+          •
+
+        </div>
+      </div>
+    </div>
+  </section>
+ -->
+
+  <!-- <section class="service-main">
+    <div class="container">
+      <div id="Financial_Industry" class="container tab-pane active">
+        <h2>
+          <div class="title-style"></div>
+          About us<span></span>
+        </h2>
+      </div>
+  </section> -->
+
+  <!-- <section class="career-details">
+    <div class="container">
+      <div class="row mx-3">
+        <div class="col-lg-12">
+          <div class="row justify-content-center">
+            <h2> <strong style="color: #2482bf;font-family: 'Aspira-Bold';font-size: 34px;">OUR VISION</strong>
+            </h2>
+          </div>
+        </div>
+      </div>
+  </section> -->
+
+  <!--   
   <section class="main-content">
     <div class="container">
       <div class="row align-items-center mt-4">
-        <div class="col-lg-5">
-          <img src="img/about-nanostuffs.jpg" />
-        </div>
-        <div class="col-lg-7">
-          <span>Nanostuffs - About Us</span>
+        <div class="col-lg-12">
           <p>
             <b>Nanostuffs</b> was founded in Oct 2010. Has its headquaters in Pune (India), extending operations & sales
             offices in Mumbai (India), Columbus OH (USA) and Dubai (UAE). So far we have grown to an
@@ -105,6 +181,226 @@
             projects.
           </p>
         </div>
+      </div>
+
+    </div>
+  </section> -->
+
+
+  <!-- ================================================================================== -->
+
+  <section class="ai">
+    <div class="container">
+      <div class="row align-items-center">
+
+        <div class="col-lg-7 ">
+          <h2>
+            <div class="title-style"></div>
+            Our vision,<span></span>
+          </h2>
+          <ul class="bulletpoints"">
+            <li class=" bulletpoints"><strong>Generates more employment</strong>- Our primary vision is to generate
+            tons
+            of employment. As a Software Development Company, we carry out projects on the latest technologies that
+            can lead to opportunities for newcomers and the fresh and diversified talent in the organization.</li>
+            <li class="bulletpoints"><strong>Client Satisfaction</strong>- Our purpose is to simplify clients' work. We
+              make sure that the talents whom we hire work efficiently on constant client fulfilment.</li>
+            <li class="bulletpoints"><strong>Contented Employees</strong>-Not just Client satisfaction for us, our
+              employee's happiness also matters. Our employees are our family and we consistently maintain a cheerful
+              and comfortable work environment. Our friendly policies keep our employees relaxed while working. </li>
+
+              Happy clients and Happy employees help the organization to reach milestones and we believe that they will
+            undoubtedly take the Nanostuffs to the zenith of success.
+          </ul>
+        </div>
+
+        <div class="col-lg-5 text-center offset-lg-">
+          <img src="img/culture-02.gif">
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="blockchain">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-5 text-center">
+          <img src="img/cultureimg-02.jpg ">
+        </div>
+        <div class="col-lg-6 offset-lg-1">
+          <h2>
+            <div class="title-style"></div>
+            Our values<span></span>
+          </h2>
+          <p class="bulletpoints">
+            Nanostuffs has built on 4 pillars that showcase our approach and behaviour towards everyone who is part of
+            us.
+          </p>
+          <ul>
+            <li class="bulletpoints"><strong>Honesty</strong> – We are like an open book to our employees and clients,
+              and also, we never
+              commit any fake commitments to any of our stakeholders. </li>
+            <li class="bulletpoints"><strong>Respect</strong> – We appreciate the demands and expectations of all the
+              stakeholders as well as
+              clients. We honour the views and suggestions of our employees.</li>
+            <li class="bulletpoints"><strong>Dependable</strong> – Our clients and employees will always have our back.
+              We are reliable when
+              our stakeholders need any support or help.</li>
+            <li class="bulletpoints"><strong>Follow Ethics </strong> – We always acknowledge following work ethics and
+              taking part in healthy
+              competition.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="ai">
+    <div class="container">
+      <div class="row align-items-center">
+
+        <div class="col-lg-7 ">
+          <h2>
+            <div class="title-style"></div>
+            Our mission,<span></span>
+          </h2>
+          <p class="bulletpoints">
+            Our mission is to create more desirable work and culture in the organisation. We try to keep consistency in
+            maintaining credibility.
+          </p>
+          <p class="bulletpoints">
+            We inspire every employee to endorse the mission of encouraging more promising change in their lives, isn't
+            it a big thing? We aspire to inspire change in all the work we do, let's say, from enhancing productivity to
+            delivering outstanding, We believe in helping each other. We strive to bring unique ideas and technology to
+            the table that helps our clients to simplify their work. We are up to encourage and support everyone to
+            succeed in everything they do.
+          </p>
+          <p class="bulletpoints">
+            Nanostuffs strongly believes that it takes an entire team to create something big. Here we are building a
+            culture where ambitious people can come to work hard, laugh, achieve, learn, and grow together. those who
+            want to make their career add up to something meaningful to their experience, then it's the right place.
+          </p>
+        </div>
+
+        <div class="col-lg-5 text-center offset-lg-">
+          <img src="img/culture-03.gif">
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+
+
+  <!-- ================================================================================== -->
+
+
+  <section class="career-details">
+    <div class="container">
+      <div class="row mx-3">
+        <div class="col-lg-12">
+          <div class="row justify-content-center">
+            <h2> <strong style="color: #2482bf;font-family: 'Aspira-Bold';font-size: 34px;">ABOUT US</strong>
+            </h2>
+          </div>
+        </div>
+      </div>
+  </section>
+
+  <section class="main-content">
+    <div class="container">
+      <div class="row align-items-center mt-4">
+        <div class="col-lg-12">
+          <p>
+            <b>Nanostuffs</b> was founded in Oct 2010. Has its headquaters in Pune (India), extending operations & sales
+            offices in Mumbai (India), Columbus OH (USA) and Dubai (UAE). So far we have grown to an
+            experience of 230+ Salesforce Implementations, 400+ Mobile Apps Developed & several AI/ML/Blockchain
+            projects.
+          </p>
+        </div>
+      </div>
+      <br><br>
+      <div class="row">
+        <div class="col-sm col-md-6 col-lg-4 animated fadeInUp wow">
+          <div class="card p-4 mb-4" style="height:10rem;">
+            <div class="d-flex justify-content-between">
+              <div>
+                <span class="num" style="color: #2482bf; font-size: 2rem;" data-val="230">0+</span>
+              </div>
+              <img src="img/about-01.png" height="55rem" alt="">
+            </div>
+            <div>
+              <span> Salesforce.com <br> Implementation</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm col-md-6 col-lg-4 animated fadeInUp wow">
+          <div class="card p-4 mb-4" style="height:10rem;">
+            <div class="d-flex justify-content-between">
+              <div>
+                <span class="num" style="color: #2482bf; font-size: 2rem;" data-val="400">0+</span>
+              </div>
+              <img src="img/about-02.png" height="55rem" alt="">
+            </div>
+            <div>
+              <span>Mobile Apps Developed</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm col-md-6 col-lg-4 animated fadeInUp wow">
+          <div class="card p-4 mb-4" style="height:10rem;">
+            <div class="d-flex justify-content-between">
+              <div>
+                <span class="num" style="color: #2482bf; font-size: 2rem;" data-val="25">0+</span>
+              </div>
+              <img src="img/about-03.png" height="55rem" alt="">
+            </div>
+            <div>
+              <span> AI & ML Blockchain Developments </span>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm col-md-6 col-lg-4 animated fadeInUp wow">
+          <div class="card p-4 mb-4" style="height:10rem;">
+            <div class="d-flex justify-content-between">
+              <div>
+                <span class="" style="color: #2482bf; font-size: 2rem;" data-val=""></span>
+              </div>
+              <img src="img/about-04.png" height="55rem" alt="">
+            </div>
+            <div>
+              <span>Enterprise Social Listing & Monitoring</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm col-md-6 col-lg-4 animated fadeInUp wow">
+          <div class="card p-4 mb-4" style="height:10rem;">
+            <div class="d-flex justify-content-between">
+              <div>
+                <span class="num" style="color: #2482bf; font-size: 2rem;" data-val="12">0+</span>
+              </div>
+              <img src="img/about-05.png" height="55rem" alt="">
+            </div>
+            <div>
+              <span>Years Experience</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm col-md-6 col-lg-4 animated fadeInUp wow">
+          <div class="card p-4 mb-4" style="height:10rem;">
+            <div class="d-flex justify-content-between">
+              <div>
+                <span class="num" style="color: #2482bf; font-size: 2rem;" data-val="85">0+</span>
+              </div>
+              <img src="img/about-06.png" height="55rem" alt="">
+            </div>
+            <div>
+              <span>Adept Resources</span>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -258,6 +554,30 @@
 
   <!-- =--=-=-=-= footer -==-=-=-=--= -->
   <div id="footer"></div>
+
+
+  <script>
+    let valueDisplays = document.querySelectorAll(".num");
+    let interval = 1000;
+
+    console.log("valuedisplay", valueDisplays)
+
+    valueDisplays.forEach(valuedisplay => {
+      let startValue = 0;
+      let endValue = parseInt(valuedisplay.getAttribute("data-val"));
+      console.log("endValue", endValue);
+      let duration = Math.floor(interval / endValue);
+      let counter = setInterval(() => {
+        startValue += 1;
+        valuedisplay.textContent = `${startValue} +`;
+        if (startValue == endValue) {
+          clearInterval(counter)
+        }
+      }, duration)
+    })
+
+  </script>
+
 
   <script type="text/javascript">
     piAId = '824513';
