--- a/culture.html
+++ b/culture.html
@@ -85,98 +85,31 @@
 
   <!-- -=-=-=-=-=-=- content part -=---=-=-=--=- -->
 
-  <!-- <section class="career-details">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-
-          <div class="row justify-content-center">
-            <h2>
-             <strong style="color: #2482bf;font-family: 'Aspira-Bold';font-size: 34px;">LIFE AT
-                NANOSTUFFS</strong>
-            </h2>
-            <div class="row justify-content-center">
-              <b style="font-family: 'Aspira-Bold'; font-size: 18px; margin-top: 30px;">
-                          Nanostuffs Technologies has an inclusive culture in which people are valued and encouraged to reach
-          their full potential. Our diversity is our strength. Despite our diverse backgrounds, experiences, and
-          viewpoints, we are united by a shared vision for our company. 
-               </b>
-            </div>
-          </div>
-        </div>
-      </div>
-  </section> -->
-
-  <!-- 
   <section class="ai">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <h2>
-            <div class="title-style"></div>
-            Our vision<span> </span>
-          </h2>
-        </div>
-      </div>
-
-      <div class="row justify-content-center mx-4">
-        <b style="font-family: 'Aspira-Bold'; font-size: 18px; margin-top: 30px;">
-          At Nanostuffs, we challenge every employee to uphold the mission of "Inspiring change in people's lives and
-          workplaces." It's a big claim, but one we believe we can keep up with. We strive to inspire change in all we
-          do, from maintaining hygienic settings that improve wellbeing and productivity to delivering great,
-          unforgettable experiences to each and every one of our guests.
-        </b>
-      </div>
-    </div>
-
-  </section> -->
-
-  <!-- <section class="ai">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <h2>
-            <div class="title-style"></div>
-            Our values<span></span>
-          </h2>
-        </div>
-      </div>
-      <b style="font-family: 'Aspira-Bold'; font-size: 18px; margin-top: 30px;">
-        We have three core values that inform our behaviour and approach to work:
-      </b>
-      <ul>
-        <li><strong>Excel</strong> – We team up to provide the best service to our clients and colleagues. We take pride
-          in our jobs and are dedicated to developing positive relationships with everyone with whom we work.
-        </li>
-        <li> <strong>Challenge</strong> – We give it our all and are constantly bringing new ideas to the table. We
-          embrace new ideas and technologies in order to assist our clients and colleagues in changing the way they live
-          and work.</li>
-        <li><strong>Inspire</strong> – We encourage and support those around us to succeed in everything they do. We
-          help each other, the environment, and the communities in which we work.
-
-        </li>
-      </ul>
-    </div>
-  </section>
- -->
-
-  <section class="blockchain">
     <div class="container">
       <div class="row align-items-center">
 
         <div class="col-lg-5 ">
-
           <h2>
             <div class="title-style"></div>
             Our <span>vision,</span>
           </h2>
-          <p>
-            <b>At Nanostuffs,</b> we challenge every employee to uphold the mission of "Inspiring change in people's
-            lives and
-            workplaces." It's a big claim, but one we believe we can keep up with. We strive to inspire change in all we
-            do, from maintaining hygienic settings that improve wellbeing and productivity to delivering great,
-            unforgettable experiences to each and every one of our guests.
-          </p>
+          <ul>
+            <li><strong>Generates more employment</strong>- Our primary vision is to generate tons of employment. As a
+              Software Development Company, we carry out projects on the latest technologies that can lead to
+              opportunities for
+              newcomers and the fresh and diversified talent in the organization.
+            </li>
+            <li><strong>Client Satisfaction</strong>- Our purpose is to simplify clients' work. We make sure that the
+              talents whom we hire work efficiently on constant client fulfilment.</li>
+            <li><strong>Contented Employees</strong>-Not just Client satisfaction for us, our employee's happiness also
+              matters. Our employees are our family and we consistently maintain a cheerful and comfortable work
+              environment. Our friendly policies keep our employees relaxed while working.
+            </li>
+            <br>
+            Happy clients and Happy employees help the organization to reach milestones and we believe that they will
+            undoubtedly take the Nanostuffs to the zenith of success.
+          </ul>
         </div>
 
         <div class="col-lg-6 text-center offset-lg-1">
@@ -186,6 +119,7 @@
       </div>
     </div>
   </section>
+
 
   <section class="ai">
     <div class="container">
@@ -201,21 +135,18 @@
             Our <span>VALUES,</span>
           </h2>
           <b style="font-family: 'Aspira-Bold'; font-size: 18px; margin-top: 30px;">
-            We have three core values that inform our behaviour and approach to work:
+            Nanostuffs has built on 4 pillars that showcase our approach and behaviour towards everyone who is part of
+            us.
           </b>
           <ul>
-            <li><strong>Excel</strong> – We team up to provide the best service to our clients and colleagues. We take
-              pride
-              in our jobs and are dedicated to developing positive relationships with everyone with whom we work.
-            </li>
-            <li> <strong>Challenge</strong> – We give it our all and are constantly bringing new ideas to the table. We
-              embrace new ideas and technologies in order to assist our clients and colleagues in changing the way they
-              live
-              and work.</li>
-            <li><strong>Inspire</strong> – We encourage and support those around us to succeed in everything they do. We
-              help each other, the environment, and the communities in which we work.
-
-            </li>
+            <li><strong>Honesty</strong> – We are like an open book to our employees and clients, and also, we never
+              commit any fake commitments to any of our stakeholders. </li>
+            <li><strong>Respect</strong> – We appreciate the demands and expectations of all the stakeholders as well as
+              clients. We honour the views and suggestions of our employees.</li>
+            <li><strong>Dependable</strong> – Our clients and employees will always have our back. We are reliable when
+              our stakeholders need any support or help.</li>
+            <li><strong>Follow Ethics </strong> – We always acknowledge following work ethics and taking part in healthy
+              competition.</li>
           </ul>
         </div>
 
@@ -235,29 +166,34 @@
             <div class="title-style"></div>
             Our <span>Mission,</span>
           </h2>
-          <p>
-            The goal of <b>Nanostuffs</b> is to make its clients' supply chain and procurement processes more effective
-            and efficient. We accomplish this through offering best-in-class technological solutions, thought
-            leadership, specialised subject matter experience, a global delivery strategy, and these other factors. Our
-            clients may accomplish more while spending less by boosting the value delivered and enhancing the
-            effectiveness of procurement and supply chain operations.
-          </p>
+
+          <li> Our mission is to create more desirable work and culture in the organisation. We try to keep consistency
+            in maintaining credibility.</li>
+          <!-- <br><br> -->
+          <li> We inspire every employee to endorse the mission of encouraging more promising change in their lives,
+            isn't
+            it a big thing? We aspire to inspire change in all the work we do, let's say, from enhancing productivity to
+            delivering outstanding, We believe in helping each other. We strive to bring unique ideas and technology to
+            the table that helps our clients to simplify their work. We are up to encourage and support everyone to
+            succeed in everything they do.</li>
+          <!-- <br><br> -->
+          <li>Nanostuffs strongly believes that it takes an entire team to create something big. Here we are building a
+            culture where ambitious people can come to work hard, laugh, achieve, learn, and grow together. those who
+            want to make their career add up to something meaningful to their experience, then it's the right place.
+          </li>
         </div>
 
         <div class="col-lg-6 text-center offset-lg-1">
-          <img src="img/culture-01.gif">
+          <img src="img/culture-03.gif">
         </div>
 
       </div>
     </div>
   </section>
 
-
   <section class="blockchain">
     <div class="container">
       <div class="row align-items-center">
-
-
 
         <div class="col-lg-6 text-center ">
           <img src="img/culture-01.gif">
@@ -266,7 +202,7 @@
 
           <h2>
             <div class="title-style"></div>
-            Our <span>Celebration,</span>
+            employee <span>Engagment,</span>
           </h2>
           <p>
             <b>Nanostuffs</b> recently celebrated Independence Day and its 12th anniversary in our Pune office.
