--- a/gallery.html
+++ b/gallery.html
@@ -77,7 +77,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Gallery</h1>
+                    <h1>Photo Gallery</h1>
                 </div>
             </div>
         </div>
@@ -85,164 +85,152 @@
 
     <!-- -=-=-=-=-=-=- content part -=---=-=-=--=- -->
 
+    <section class="service-main">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>
+                        <!-- <div class="title-style"></div> -->
+                        <!-- employee engagement -->
+                        <span>celebrations</span>
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cilents">
+        <div class="container">
+            <div class="row mx-5">
+                <div class="nav flex-row nav-pills" id="v-pills-tab" role="" aria-orientation="horizontal">
+                    <div class="nav-link" id="v-pills-profile-tab" data-toggle="pill" data-target="#anv-2021" role="tab"
+                        aria-controls="anv-2021" aria-selected="false">2021</div>
+                    <div class="nav-link active" id="2021" data-toggle="pill" data-target="#anv-2022" role="tab"
+                        aria-controls="anv-2022" aria-selected="true">2022 </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="cilents">
         <div class="container">
             <div class="row">
                 <div class="tab-content">
                     <div id="Financial_Industry" class="container tab-pane active">
+                        <div class="row">
 
-                        <div class="row mb-5">
-                            <div class="col-lg-12">
-                                <h2>
-                                    <div class="title-style"></div>
-                                    Nanostuffs<span>12th anniversary</span>
-                                </h2>
-                            </div>
-                            <div class="gallerycon">
+                            <div class="row">
+                                <div class="tab-content" id="v-pills-tabContent">
 
-                                <div class="box">
+                                    <!-- ===============2022================ -->
 
-                                    <div class="dream">
-                                        <img src="/img/gallery/GIA-01.jpeg">
-                                        <img src="/img/gallery/GIA-05.jpeg">
-                                        <img src="/img/gallery/GIA-04.jpeg">
+                                    <div class="tab-pane fade show active" id="anv-2022" role="tabpanel"
+                                        aria-labelledby="2022">
+                                        <div class="row mx-2">
+                                            <div class="col-lg-12">
+                                                <h2>
+                                                    <div class="title-style"></div>
+                                                    Nanostuffs<span>12th anniversary</span>
+                                                </h2>
+                                            </div>
+                                            <div class="gallerycon">
+                                                <div class="box">
+
+                                                    <div class="dream">
+                                                        <img src="/img/gallery/GIA-01.jpeg">
+                                                        <img src="/img/gallery/GIA-05.jpeg">
+                                                        <img src="/img/gallery/GIA-04.jpeg">
+                                                    </div>
+
+                                                    <div class="dream">
+                                                        <img src="/img/gallery/GIA-03.jpeg">
+                                                        <img src="/img/gallery/GIA-06.jpeg">
+                                                        <img src="/img/gallery/GIA-07.jpeg">
+                                                    </div>
+
+                                                    <div class="dream">
+                                                        <img src="/img/gallery/GIA-02.jpeg">
+                                                        <img src="/img/gallery/GIA-08.jpeg">
+                                                    </div>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <hr>
+                                        <div class="row mx-2">
+                                            <div class="col-lg-12">
+                                                <h2>
+                                                    <div class="title-style"></div>
+                                                    Indepenance Day<span> Celebration</span>
+                                                </h2>
+                                            </div>
+                                            <div class="gallerycon">
+
+                                                <div class="box">
+                                                    <div class="dream">
+                                                        <img src="/img/gallery/GI-04.jpeg">
+                                                        <img src="/img/gallery/GI-06.jpeg">
+                                                        <img src="/img/gallery/GI-03.jpeg">
+                                                    </div>
+
+                                                    <div class="dream">
+                                                        <img src="/img/gallery/GI-05.jpeg">
+                                                        <img src="/img/gallery/GI-09.jpeg">
+                                                        <img src="/img/gallery/loader2.gif">
+                                                    </div>
+
+                                                    <div class="dream">
+                                                        <img src="/img/gallery/GI-02.jpeg">
+                                                        <img src="/img/gallery/GI-07.jpeg">
+                                                        <img src="/img/gallery/GI-08.jpeg">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
 
-                                    <div class="dream">
-                                        <img src="/img/gallery/GIA-03.jpeg">
-                                        <img src="/img/gallery/GIA-06.jpeg">
-                                        <img src="/img/gallery/GIA-07.jpeg">
 
-                                    </div>
 
-                                    <div class="dream">
-                                        <img src="/img/gallery/GIA-02.jpeg">
-                                        <img src="/img/gallery/GIA-08.jpeg">
+                                    <!-- ===============2021================ -->
+
+
+                                    <div class="tab-pane fade" id="anv-2021" role="tabpanel"
+                                        aria-labelledby="v-pills-profile-tab">
+                                        <div class="row mx-2">
+                                            <div class="col-lg-12">
+                                                <h2>
+                                                    <div class="title-style"></div>
+                                                    Nanostuffs<span> anniversary</span>
+                                                </h2>
+                                            </div>
+                                            <div class="gallerycon">
+                                                <div class="box">
+                                                    <div class="dream">
+                                                        <img src="/img/gallery/GI-12.jpeg"
+                                                            alt="/img/gallery/loader.gif">
+                                                    </div>
+                                                    <div class="dream">
+                                                        <img src="/img/gallery/GI-11.jpeg"
+                                                            alt="/img/gallery/loader.gif">
+                                                    </div>
+                                                    <div class="dream">
+                                                        <img src="/img/gallery/loader.gif">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+
                         </div>
-
-                        <div class="row mb-5">
-                            <div class="col-lg-12">
-                                <h2>
-                                    <div class="title-style"></div>
-                                    Indepenance Day<span> Celebration</span>
-                                </h2>
-                            </div>
-                            <div class="gallerycon">
-
-                                <div class="box">
-
-                                    <div class="dream">
-                                        <img src="/img/gallery/GI-04.jpeg">
-                                        <img src="/img/gallery/GI-06.jpeg">
-                                        <img src="/img/gallery/GI-03.jpeg">
-                                    </div>
-
-                                    <div class="dream">
-                                        <img src="/img/gallery/GI-05.jpeg">
-                                        <img src="/img/gallery/GI-09.jpeg">
-
-
-                                    </div>
-
-                                    <div class="dream">
-                                        <img src="/img/gallery/GI-02.jpeg">
-                                        <img src="/img/gallery/GI-07.jpeg">
-                                        <img src="/img/gallery/GI-08.jpeg">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- <div class="row mb-5">
-                            <div class="col-lg-12">
-                                <h2>
-                                    <div class="title-style"></div>
-                                    Video<span>Gallery</span>
-                                </h2>
-                            </div>
-
-                            <a href="img/gallery/NTV-01.mp4" target="_blank">
-                                <video src="img/gallery/NTV-01.mp4" controls style="height:400px;" muted />
-                            </a>
-                            <a href="img/gallery/NTV-01.mp4" target="_blank">
-                                <video src="img/gallery/NTV-01.mp4" controls style="height:400px;" muted />
-                            </a>
-                               <a href="img/gallery/NTV-01.mp4" target="_blank">
-                                <video src="img/gallery/NTV-01.mp4" controls style="height:400px;" muted />
-                            </a>
-                            <video src="img/gallery/NTV-02.mp4" controls style="height:100px ;" />
-
-                    </div> -->
-
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- 
-    <section class="cilents">
-        <div class="container">
-            <div class="row">
-                <div class="tab-content">
-                    <div id="Financial_Industry" class="container tab-pane active">
 
-                        <div class="row mb-5">
-                            <div class="col-lg-12">
-                                <h2>
-                                    <div class="title-style"></div>
-                                    Indepenance Day<span> Celebration</span>
-                                </h2>
-                            </div>
-                            <div class="gallerycon">
 
-                                <div class="box">
-
-                                    <div class="dream">
-                                        <img src="/img/gallery/GI-01.jpeg">
-                                        <img src="/img/gallery/GI-09.jpeg">
-                                        <img src="/img/gallery/GI-03.jpeg">
-                                    </div>
-
-                                    <div class="dream">
-                                        <img src="/img/gallery/GI-04.jpeg">
-                                        <img src="/img/gallery/GI-05.jpeg">
-                                        <img src="/img/gallery/GI-06.jpeg">
-
-                                    </div>
-
-                                    <div class="dream">
-                                        <img src="/img/gallery/GI-02.jpeg">
-                                        <img src="/img/gallery/GI-07.jpeg">
-                                        <img src="/img/gallery/GI-08.jpeg">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row mb-5">
-
-                            <div class="col-lg-12">
-                                <h2>
-                                    <div class="title-style"></div>
-                                    Video<span>Gallery</span>
-                                </h2>
-                            </div>
-
-                            <a href="img/gallery/NTV-01.mp4" target="_blank">
-                                <img src="img/gallery/NTV-01.mp4" controls style="height:100px ;" />
-                            </a>
-                            <video src="img/gallery/NTV-02.mp4" controls style="height:100px ;" />
-
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <!-- =--=-=-=-= footer -==-=-=-=--= -->
     <div id="footer"></div>
