--- a/header.html
+++ b/header.html
@@ -1,12 +1,12 @@
 <div class="mob-out-logo">
-  <a href="index.html"><img src="img/nanostuffs-logo.png"></a>
+  <a href="index.html"><img src="img/nano-logo.png"></a>
 </div>
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="mob-logo">
     <!-- <a href="index.html"><img src="img/logo.png"></a> -->
-    <a href="index.html"><img src="img/nanostuffs-logo.png"></a>
+    <a href="index.html"><img src="img/nano-logo.png"></a>
   </div>
 
   <ul class="side-menu">
@@ -50,7 +50,7 @@
       <a href="career.html">Career</a>
     </li>
     <li>
-      <!--<a href="dreamforce2019.html"><b>We exhibited in Dreamforce 2019</b></a>-->
+      <a href="gallery.html">Our Culture</a>
     </li>
     <li>
       <a href="mailto:info@nanostuffs.com">
@@ -91,7 +91,7 @@
         <div class="col-lg-3">
           <div class="logo">
             <a href="index.html">
-              <img src="img/nanostuffs-logo-02 (2).png" />
+              <img src="img/nano-logo.png" />
             </a>
           </div>
         </div>
@@ -107,7 +107,7 @@
               <a href="career.html">Careers</a>
             </li>
             <li>
-              <a href="culture.html">Our Culture</a>
+              <a href="gallery.html">Our Culture</a>
             </li>
             <li>
 
