--- a/progressive-web-app-chose.html
+++ b/progressive-web-app-chose.html
@@ -258,7 +258,7 @@
                 <div class="col-lg-8">
                     <p align="center">
                         <a href="contactus.html" class="scroll-icon" style="color: #000000;">
-                            Next: Contack Us<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                            Next: Contact Us<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         </a>
                     </p>
                 </div>
