--- a/salesforce-practice.html
+++ b/salesforce-practice.html
@@ -57,7 +57,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -107,7 +107,7 @@
         <div class="col-lg-12">
           <h2>
             <div class="title-style"></div>
-            Salesforce.com Commerce Cloud (Demandware)
+            Salesforce.com Commerce <span>Cloud (Demandware)</span>
           </h2>
         </div>
       </div>
@@ -134,36 +134,30 @@
 
   </section>
 
-  <section class="ai">
+  <section class="blockchain">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
+      <div class="row align-items-center">
+        <div class="col-lg-6 text-center">
+          <div class="consulting-img">
+            <img src="img/b2b-Cloudcraze.jpg">
+          </div>
+        </div>
+        <div class="col-lg-5 offset-lg-1">
           <h2>
             <div class="title-style"></div>
-            Salesforce.com B2B Commerce (Cloudcraze)
+
+            Salesforce.com B2B <span>Commerce (Cloudcraze)</span>
           </h2>
-        </div>
-      </div>
-      <div class="row align-items-center flex-lg-row-reverse">
-        <div class="col-lg-6 text-center">
-          <img src="img/commerce_cloud.png">
-        </div>
-        <div class="col-lg-6">
-          <div class="ai-main">
-            <div class="ai-content">
-              <p>Nanostuffs has worked on few of the World's largest B2B Commerce Cloud (Cloudcraze) implementations.
-                Please send an email on <a href="mailto:info@nanostuffs"><b>info@nanostuffs.com</b></a> & we'll be more
-                than delighted to have a live presentation done of our past implementations & discuss your requirements.
-                We can also provide experienced & certified Salesforce.com B2B Commerce Cloud Developers, Consultants &
-                Architects on staff augmentation basis, we have strong team of 50+ Commerce Cloud (both Demandware &
-                Cloudcraze) developers.</p>
-              <b><a href="b2b-commerce-cloudcraze.html">Learn More &gt;</a></b>
-            </div>
-          </div>
+          <p>Nanostuffs has worked on few of the World's largest B2B Commerce Cloud (Cloudcraze) implementations.
+            Please send an email on <a href="mailto:info@nanostuffs"><b>info@nanostuffs.com</b></a> & we'll be more
+            than delighted to have a live presentation done of our past implementations & discuss your requirements.
+            We can also provide experienced & certified Salesforce.com B2B Commerce Cloud Developers, Consultants &
+            Architects on staff augmentation basis, we have strong team of 50+ Commerce Cloud (both Demandware &
+            Cloudcraze) developers.</p>
+          <b><a href="b2b-commerce-cloudcraze.html">Learn More &gt;</a></b>
         </div>
       </div>
     </div>
-
   </section>
 
   <section class="ai">
@@ -172,7 +166,7 @@
         <div class="col-lg-12">
           <h2>
             <div class="title-style"></div>
-            DevOps - Salesforce
+            DevOps <span> Salesforce</span>
           </h2>
         </div>
       </div>
@@ -200,39 +194,32 @@
 
   </section>
 
-  <section class="ai">
+  <section class="blockchain">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
+      <div class="row align-items-center">
+        <div class="col-lg-6 text-center">
+          <div class="consulting-img">
+            <img src="img/datorama-logo.png">
+          </div>
+        </div>
+        <div class="col-lg-5 offset-lg-1">
           <h2>
             <div class="title-style"></div>
-            Salesforce Datorama
+
+            Salesforce <span>Datorama</span>
           </h2>
-        </div>
-      </div>
-      <div class="row align-items-center flex-lg-row-reverse">
-        <div class="col-lg-6 text-center">
-          <img src="img/datorama-logo.png">
-          <!--  <img src="D:\Projects\Datorama\Website - content\Updated\datorama-logo.png">  -->
-        </div>
-        <div class="col-lg-6">
-          <div class="ai-main">
-            <div class="ai-content">
-              <p>Salesforce Datorama is a marketing intelligence platform that transforms the way marketers optimize
-                their marketing performance, impact and loyality. It empowers to connect the entire ecosystem of your
-                marketing data irrespective of the data's variety, volume and source through Datorama's connectors.
-                <br><br>
-                We at Nanostuffs, are experts in visualizing your Marketing data on the Datorama platform. Folks at
-                Nanostuffs are experienced Datorama consultants who will help you make smarter decisions by connecting
-                and visualizing your marketing data and KPIs with speed and precision.
-              </p>
-              <b><a href="Salesforce-datorama.html">Learn More &gt;</a></b>
-            </div>
-          </div>
+          <p>Salesforce Datorama is a marketing intelligence platform that transforms the way marketers optimize
+            their marketing performance, impact and loyality. It empowers to connect the entire ecosystem of your
+            marketing data irrespective of the data's variety, volume and source through Datorama's connectors.
+            <br><br>
+            We at Nanostuffs, are experts in visualizing your Marketing data on the Datorama platform. Folks at
+            Nanostuffs are experienced Datorama consultants who will help you make smarter decisions by connecting
+            and visualizing your marketing data and KPIs with speed and precision.
+          </p>
+          <b><a href="Salesforce-datorama.html">Learn More &gt;</a></b>
         </div>
       </div>
     </div>
-
   </section>
 
   <section class="ai">
@@ -354,34 +341,6 @@
     </div>
   </section>
 
-  <section class="blockchain">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6 text-center">
-          <div class="consulting-img">
-            <img src="img/heroku-products.png">
-          </div>
-        </div>
-        <div class="col-lg-5 offset-lg-1">
-          <h2>
-            <div class="title-style"></div>
-            Heroku
-          </h2>
-          <p>
-            With a lot of our own built Apps hosted on Heroku, <b>Nanostuffs</b> can help you build, manage, and deploy
-            great apps at scale with Heroku. Where we bring value add is our Senior Heroku Consultants having plethora
-            knowledge of 150+ third-party add-ons, 1000+ open source buildpacks, and 3000+ ready-to-deploy Heroku
-            Buttons providing a rich ecosystem of pre-integrated extensions and services.<br>One of our additionaly
-            Unique Offering is building a Robust Salesforce Backup &amp; Archiving Solution using Heroku &amp; Heroku
-            Connect. This is realtime, seamless &amp; scalable backup solution &amp; only one of the kind that exists in
-            the world. Click below to know more.
-          </p>
-          <b><a href="heroku-implementation.html">Learn More &gt;</a></b>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <section class="ai">
     <div class="container">
       <div class="row">
@@ -399,6 +358,7 @@
         <div class="col-lg-6">
           <div class="ai-main" style="background-image:url(img/monitoring-bg.png);">
             <div class="ai-content">
+
               <p>Have very complex Quoting Process? No big deal, lets synerzise on our extensive CPQ &amp; Q2C skills to
                 configure your products &amp; pricing for deliverying quotes easily, process orders &amp; invoices
                 prompty &amp; gain immediate insights from every part of the sales process on any
@@ -406,6 +366,8 @@
                 a quote through billing and renewals.
               </p>
               <b><a href="salesforce-steelbrick-cpq-expert.html">Learn More &gt;</a></b>
+
+
             </div>
           </div>
         </div>
@@ -538,28 +500,63 @@
       <div class="row align-items-center">
         <div class="col-lg-6 text-center">
           <div class="consulting-img">
-            <img src="img/Staff-Augmentation.png">
+            <img src="img/heroku-products.png">
           </div>
         </div>
         <div class="col-lg-5 offset-lg-1">
           <h2>
             <div class="title-style"></div>
-            Staff Augmentation<span>(Resource Outsourcing)</span>
+            Heroku
           </h2>
           <p>
-            Hire our niche skilled Salesforce.com Architects/Consultants/Developers on contract basis, Time &amp;
-            Material pricing model. They can either work out of our office or your office In &amp; Out of India. We
-            already support a lot of large MNCs providing highly experienced &amp; certified Salesforce.com Developers,
-            Architects, Pardot &amp; ExactTarget Consultants, Social Monitoring Experts, Service Cloud Developers,
-            Testers &amp; Quality Assurance Agents, Project Managers, Solution Experts, etc. Please reach out to know
-            the Rates.
+            With a lot of our own built Apps hosted on Heroku, <b>Nanostuffs</b> can help you build, manage, and deploy
+            great apps at scale with Heroku. Where we bring value add is our Senior Heroku Consultants having plethora
+            knowledge of 150+ third-party add-ons, 1000+ open source buildpacks, and 3000+ ready-to-deploy Heroku
+            Buttons providing a rich ecosystem of pre-integrated extensions and services.<br>One of our additionaly
+            Unique Offering is building a Robust Salesforce Backup &amp; Archiving Solution using Heroku &amp; Heroku
+            Connect. This is realtime, seamless &amp; scalable backup solution &amp; only one of the kind that exists in
+            the world. Click below to know more.
           </p>
-          <b><a href="contactus.html">Continue Knowing Nanostuffs &gt;</a></b>
+          <b><a href="heroku-implementation.html">Learn More &gt;</a></b>
         </div>
       </div>
     </div>
   </section>
 
+  <section class="ai">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h2>
+            <div class="title-style"></div>
+            Staff Augmentation<span>(Resource Outsourcing)</span>
+          </h2>
+        </div>
+      </div>
+      <div class="row align-items-center flex-lg-row-reverse">
+        <div class="col-lg-6 text-center">
+          <img src="img/Staff-Augmentation.png">
+        </div>
+        <div class="col-lg-6">
+          <div class="ai-main" style="background-image:url(img/monitoring-bg.png);">
+            <div class="ai-content">
+              <p>
+                Hire our niche skilled Salesforce.com Architects/Consultants/Developers on contract basis, Time &amp;
+                Material pricing model. They can either work out of our office or your office In &amp; Out of India. We
+                already support a lot of large MNCs providing highly experienced &amp; certified Salesforce.com
+                Developers, Architects, Pardot &amp; ExactTarget Consultants, Social Monitoring Experts, Service Cloud
+                Developers, Testers &amp; Quality Assurance Agents, Project Managers, Solution Experts, etc. Please
+                reach out to know the Rates.
+              </p>
+              <b><a href="contactus.html">Continue Knowing Nanostuffs &gt;</a></b>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </section>
 
   <!-- =--=-=-=-= footer -==-=-=-=--= -->
   <div id="footer"></div>
