--- a/Salesforce-datorama.html
+++ b/Salesforce-datorama.html
@@ -56,7 +56,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -105,6 +105,7 @@
         </h2>
       </div>
     </div>-->
+
       <div class="row">
         <div class="col-lg-12">
           <div class="ai-main">
@@ -153,6 +154,7 @@
       </div>
 
       <div class="row mt-4">
+
         <div class="col-lg-6 animated fadeInUp wow">
           <div class="s-icon">
             <img src="img/sf/staff.png" />
@@ -164,8 +166,6 @@
           </p>  -->
           </div>
         </div>
-
-
         <div class="col-lg-6 animated fadeInUp wow">
           <div class="s-icon">
             <img src="img/sf/pardot.png" />
@@ -188,7 +188,6 @@
           </p>  -->
           </div>
         </div>
-
         <div class="col-lg-6 animated fadeInUp wow">
           <div class="s-icon">
             <img src="img/sf/setting.png" />
@@ -222,7 +221,6 @@
           </p>  -->
           </div>
         </div>
-
         <div class="col-lg-6 animated fadeInUp wow">
           <div class="s-icon">
             <img src="img/sf/CPQ.png" />
@@ -289,56 +287,30 @@
           </p>  -->
           </div>
         </div>
+
       </div>
-    </div>
+
     </div>
   </section>
   <hr>
 
-  <!--
-<section class="service-main">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <h2>
-          <div class="title-style"></div>
-          EXPERIENCES<span>Few Screenshots</span>
-        </h2>
+  <section class="-main">
+    <div class="container">
+      <div class="row mt-4">
+        <div class="col-lg-2"> </div>
+        <div class="col-lg-8">
+          <p align="center">
+            <a href="salesforce-marketing-cloud-services.html" class="scroll-icon" style="color: #000000;">
+              Next: MARKETING CLOUD B2C AUTOMATION
+              <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+        <div class="col-lg-2"></div>
       </div>
     </div>
-    <div class="row mt-4">
-	<div class="col-lg-2">
-	</div>
-	
-		 <div class="col-lg-8">
-		 
-		 <div class="w3-content w3-display-container">
-  <img class="mySlides" src="img/b2b/cloudcraze-b2b-commerce-1.png" style="width:100%; display:block" >
-	 <img class="mySlides" src="img/b2b/cloudcraze-b2b-commerce-2.png" style="width:100%">
-	 <img class="mySlides" src="img/b2b/cloudcraze-b2b-commerce-3.png" style="width:100%">
-
-  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-</div>
-      </div>
-        <div class="col-lg-2">
-	</div>
-        <div class="col-lg-2">
-	</div>
-			<div class="col-lg-8">
-					<p align="center" >
-						<a href="heroku-implementation.html" class="scroll-icon" style="color: #000000;">
-							     Next: Heroku<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						</a>
-					</p>
-		   </div>
-		    <div class="col-lg-2">
-	</div>
-      </div> 
-	 </div>
-  </div>
-</section>
--->
+    </div>
+  </section>
 
   <!-- =--=-=-=-= footer -==-=-=-=--= -->
   <div id="footer"></div>
