--- a/career.html
+++ b/career.html
@@ -81,7 +81,7 @@
   <div id="header"></div>
 
   <!-- =-==- banner -==-=-=-=- -->
-  <section class="about-banner" style="background-image:url(img/about-bg.png); height: 300px;">
+  <section class="about-banner" style="background-image:url(img/about-bg.png); height: 300px; width: 100%;">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -94,7 +94,7 @@
   <!-- -=-=-=-=-=-=- content part -=---=-=-=--=- -->
   <section class="career-details">
     <div class="container">
-      <div class="row">
+      <div class="row mx-3">
         <div class="col-lg-12">
 
           <div class="row justify-content-center">
@@ -325,20 +325,15 @@
 
   <section class="career-details">
     <div class="container">
-      <div class="row">
+      <div class="row px-3">
         <div class="col-lg-12">
-
           <div class="row justify-content-center">
-            <div class="row justify-content-center">
-              <b style="font-family: 'Aspira-Bold'; font-size: 18px; margin-top: 30px;">
-                We strongly believe that it takes an entire team to create something big. Here at Nanostuffs, we are
-                building a culture where ambitious people (like you) can join us to work hard together, laugh together,
-                achieve together, learn together and grow together. If you are ready to make your career which adds up
-                to something meaningful to your experience, then yes you've come to the right place. Join us now!
-              </b>
-            </div>
+            <p style="font-family: 'Aspira-Bold'; font-size: 18px; margin-top: 30px;">
+              Interested candidates can share their resume on <a
+                href="mailto:recruitment@nanostuffs.com?subject= Reference Nanostuffs Website" class=""
+                style="color: rgba(0, 0, 255, 0.392);">recruitment@nanostuffs.com</a>. Kindly mention the
+              technology in the subject line while applying for any position. </p>
           </div>
-
         </div>
       </div>
   </section>
