--- a/clients.html
+++ b/clients.html
@@ -80,9 +80,8 @@
   <div id="header"></div>
 
   <!-- =-==- banner -==-=-=-=-  -->
-  <!-- <section class="about-banner" style="background-image:url(img/about-bg.png);"> -->
+  <section class="about-banner" style="background-image:url(img/about-bg.png);">
 
-  <section class="about-banner" style="background-color: #2482bf; height: 300px;">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
