--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
 </head>
 
 <body>
+
   <div id="header"></div>
 
 
   <!-- =-==- slider -==-=-=-=- -->
+
   <section class="home-banner">
     <div class="container">
       <div class="row">
@@ -143,7 +145,9 @@
       </div>
     </div>
   </section>
+
   <!-- -=-=-=-=-=-=- content part -=---=-=-=--=- -->
+
   <section class="consulting">
     <div class="container">
       <div class="row align-items-center">
@@ -258,26 +262,55 @@
       <div class="row align-items-center">
         <div class="col-lg-6 text-center">
           <div class="consulting-img">
-            <img src="img/ios-and.png">
+            <img src="img/pwa-applications.png">
           </div>
         </div>
         <div class="col-lg-5 offset-lg-1">
           <h2>
             <div class="title-style"></div>
-            iOS & Android<span>& PWA Apps</span>
+            Progressive web<span>applications</span>
           </h2>
           <p>
-            <b>Nanostuffs</b> offer comprehensive and custom-built mobility solutions and services to startups and
-            enterprises.In <b>Nanostuffs</b> app development services, we strategize, design, build and manage optimal
-            solutions for your mobile app and provide you with an indispensable range of services.
+            <b>Nanostuffs</b> offers high-end progressive web app development solutions that are remarkably efficient,
+            highly responsive, and aim to meet specific user requirements. We ensure that when users visit your website,
+            they have an immersive app experience thanks to our PWA development services.
           </p>
-          <b><a href="Mobile-Application-development.html">Learn More &gt;</a></b>
+          <b><a href="Progressive-Web-Apps-developments.html">Learn More &gt;</a></b>
         </div>
       </div>
     </div>
   </section>
 
-
+  <section class="ai">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h2>
+            <div class="title-style"></div>
+            iOS & Android<span>Applications</span>
+          </h2>
+        </div>
+      </div>
+      <div class="row align-items-center flex-lg-row-reverse">
+        <div class="col-lg-6 text-center">
+          <img src="img/ios-and.png">
+        </div>
+        <div class="col-lg-6">
+          <div class="ai-main" style="background-image:url(img/monitoring-bg.png);">
+            <div class="ai-content">
+              <p>
+                <b>Nanostuffs</b> offer comprehensive and custom-built mobility solutions and services to startups and
+                enterprises.In <b>Nanostuffs</b> app development services, we strategize, design, build and manage
+                optimal
+                solutions for your mobile app and provide you with an indispensable range of services.
+              </p>
+              <b><a href="Mobile-Application-development.html">Learn More &gt;</a></b>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- 
   <section class="product">
@@ -326,16 +359,16 @@
               </div>
             </div>
             (repeated) add new products from below "item class"
-  <div class="item">
-    <div class="product-main">
-      <a href="Mobile-Application-development.html"> <img src="img/pr-slaas.png"></a>
-      <span>SLAAS</span>
+            <div class="item">
+              <div class="product-main">
+                <a href="Mobile-Application-development.html"> <img src="img/pr-slaas.png"></a>
+                <span>SLAAS</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
   </section>
 
 
@@ -440,67 +473,70 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
+   -->
 
   <!-- =--=-=-=-= footer -==-=-=-=--= -->
   <div id="footer"></div>
 
-  <script>
-    $('.testimonail .owl-carousel').owlCarousel({
-      loop: false,
-      margin: 0,
-      nav: true,
-      navText: ["<i class='fa fa-caret-left'></i>", "<i class='fa fa-caret-right'></i>"],
-      responsive: {
-        0: {
-          items: 1
-        },
-        600: {
-          items: 1
-        },
-        1000: {
-          items: 1
-        }
-      }
-    });
 
-    $('.clients .owl-carousel').owlCarousel({
-      loop: false,
-      margin: 0,
-      nav: true,
-      navText: ["<i class='fa fa-caret-left'></i>", "<i class='fa fa-caret-right'></i>"],
-      responsive: {
-        0: {
-          items: 1
-        },
-        600: {
-          items: 3
-        },
-        1000: {
-          items: 5
-        }
-      }
-    });
+</body>
 
-    $('section.product .owl-carousel').owlCarousel({
-      loop: true,
-      margin: 30,
-      nav: true,
-      navText: ["<i class='fa fa-caret-left'></i>", "<i class='fa fa-caret-right'></i>"],
-      responsive: {
-        0: {
-          items: 1
-        },
-        600: {
-          items: 3
-        },
-        1000: {
-          items: 6
-        }
+<script>
+  $('.testimonail .owl-carousel').owlCarousel({
+    loop: false,
+    margin: 0,
+    nav: true,
+    navText: ["<i class='fa fa-caret-left'></i>", "<i class='fa fa-caret-right'></i>"],
+    responsive: {
+      0: {
+        items: 1
+      },
+      600: {
+        items: 1
+      },
+      1000: {
+        items: 1
       }
-    })
-  </script>
+    }
+  });
 
+  $('.clients .owl-carousel').owlCarousel({
+    loop: false,
+    margin: 0,
+    nav: true,
+    navText: ["<i class='fa fa-caret-left'></i>", "<i class='fa fa-caret-right'></i>"],
+    responsive: {
+      0: {
+        items: 1
+      },
+      600: {
+        items: 3
+      },
+      1000: {
+        items: 5
+      }
+    }
+  });
+
+  $('section.product .owl-carousel').owlCarousel({
+    loop: true,
+    margin: 30,
+    nav: true,
+    navText: ["<i class='fa fa-caret-left'></i>", "<i class='fa fa-caret-right'></i>"],
+    responsive: {
+      0: {
+        items: 1
+      },
+      600: {
+        items: 3
+      },
+      1000: {
+        items: 6
+      }
+    }
+  })
+</script>
 
 </body>
 
