--- a/salesforce-demandware.html
+++ b/salesforce-demandware.html
@@ -389,11 +389,9 @@
         </div>
       </div>
       <div class="row mt-4">
-        <div class="col-lg-2">
-        </div>
 
+        <div class="col-lg-2"></div>
         <div class="col-lg-8">
-
           <div class="w3-content w3-display-container">
             <img class="mySlides" src="img/pardot/demandware-report-1.jpg" style="width:100%; display:block">
             <img class="mySlides" src="img/pardot/demandware-config-1.png" style="width:100%">
@@ -404,10 +402,8 @@
           </div>
         </div>
 
-        <div class="col-lg-2">
-        </div>
-        <div class="col-lg-2">
-        </div>
+        <div class="col-lg-2"></div>
+        <div class="col-lg-2"></div>
         <div class="col-lg-8">
           <p align="center">
             <a href="b2b-commerce-cloudcraze.html" class="scroll-icon" style="color: #000000;">
@@ -415,8 +411,7 @@
             </a>
           </p>
         </div>
-        <div class="col-lg-2">
-        </div>
+        <div class="col-lg-2"></div>
       </div>
     </div>
     </div>
